--- a/events/templates/events/results.html
+++ b/events/templates/events/results.html
@@ -8,8 +8,9 @@
 <h1>{{ question.question_text }}</h1>
 <ul>
 {% for choice in question.choice_set.all %}
-    <li>{{ choice.vote }}</li>
+    <li>{{ choice.choice_text }} -- {{ choice.vote }} vote {{ choice.vote|pluralize }}</li>
 {% endfor %}
 </ul>
+<a href="{% url 'events:detail' question.id %}">vote again?</a>
 </body>
 </html>
